--- a/index.html
+++ b/index.html
@@ -392,47 +392,59 @@ padding-top: 40px;
             line-height: 1.6;
         }
 
-        /* Contact Section */
-        .contact-content {
-            text-align: center;
-        }
+/* Contact Section */
+.contact-content {
+  text-align: center;
+}
 
-        .contact-info {
-            display: flex;
-            justify-content: center;
-            gap: 3rem;
-            margin-top: 2rem;
-            flex-wrap: wrap;
-        }
+/* Wrap contact content inside a box */
+.contact-box {
+  border: 1px solid #00ff41;
+  padding: 2rem;
+  border-radius: 12px;
+  background-color: rgba(0, 255, 65, 0.05);
+  max-width: 900px;
+  margin: 0 auto;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-        .contact-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 0.5rem;
-        }
+.contact-box:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 25px rgba(0, 255, 65, 0.4);
+}
 
-        .contact-icon {
-            font-size: 2rem;
-            color: #00ff41;
-        }
-
-        .contact-link {
-            color: #ffffff;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .contact-link:hover {
-            color: #00ff41;
-        }
-.contact-container {
+.contact-info {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  gap: 2rem;
+  justify-content: center;
+  gap: 3rem;
+  margin-top: 2rem;
   flex-wrap: wrap;
 }
+
+.contact-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.contact-icon {
+  font-size: 2rem;
+  color: #00ff41;
+}
+
+.contact-link {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1.05rem;
+  transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+.contact-link:hover {
+  color: #00ff41;
+  text-shadow: 0 0 5px #00ff41;
+}
+
 
 .status-item {
   display: flex;
@@ -692,33 +704,43 @@ padding-top: 40px;
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-        <h2 class="section-title">Get In Touch</h2>
-        <div class="contact-content">
-            <p>Let's connect and discuss cybersecurity opportunities, collaborations, or just have a tech conversation!</p>
-            <div class="contact-info">
-                <div class="contact-item">
-                    <i class="fas fa-phone contact-icon"></i>
-                    <a href="tel:6305491543" class="contact-link">6305491543</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-envelope contact-icon"></i>
-                    <a href="mailto:ashish.t2123@gmail.com" class="contact-link">ashish.t2123@gmail.com</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-github contact-icon"></i>
-                    <a href="https://github.com/AshishT-123" class="contact-link">AshishT-123</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-linkedin contact-icon"></i>
-                    <a href="https://linkedin.com/in/ashish-t-531449248" class="contact-link">ashish-t-531449248</a>
- 
+   <!-- Contact Section -->
+<section id="contact" class="section" data-aos="fade-up">
+  <h2 class="section-title">Get In Touch</h2>
 
-                </div>
-            </div>
-        </div>
-    </section>
+  <div class="contact-box">
+ <div class="contact-content">
+    <p>Let's connect and discuss cybersecurity opportunities, collaborations, or just have a tech conversation!</p>
+    
+    <div class="contact-info">
+      <div class="contact-item">
+        <i class="fas fa-phone contact-icon"></i>
+        <a href="tel:6305491543" class="contact-link">6305491543</a>
+      </div>
+      <div class="contact-item">
+        <i class="fas fa-envelope contact-icon"></i>
+        <a href="mailto:ashish.t2123@gmail.com" class="contact-link">ashish.t2123@gmail.com</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-github contact-icon"></i>
+        <a href="https://github.com/AshishT-123" class="contact-link">AshishT-123</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-linkedin contact-icon"></i>
+        <a href="https://linkedin.com/in/ashish-t-531449248" class="contact-link">ashish-t-531449248</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-x-twitter contact-icon"></i>
+        <a href="https://x.com/AshishT617738" class="contact-link">AshishT617738</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-instagram contact-icon"></i>
+        <a href="https://www.instagram.com/thatikondaashish/?hl=en" class="contact-link">thatikondaashish</a>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Status Bar -->
     <div class="status-bar">
