--- a/index.html
+++ b/index.html
@@ -730,7 +730,8 @@ padding-top: 40px;
         <a href="https://linkedin.com/in/ashish-t-531449248" class="contact-link">ashish-t-531449248</a>
       </div>
       <div class="contact-item">
-        <i class="fab fa-x-twitter contact-icon"></i>
+        <i class="fab fa-twitter contact-icon"></i>
+
         <a href="https://x.com/AshishT617738" class="contact-link">AshishT617738</a>
       </div>
       <div class="contact-item">
